# arbitrageFinder

./: .gitignore  README.md  main.py  pyproject.toml
arbitrage/: engine.py  history.py  notifier.py  ui.py
betting_sites/: mock.py  odds_api.py  sports_api.py
